[tool.poetry]
name = "api_skeleton"
version = "0.1.0"
description = ""
authors = ["Ggkenios  <ggkenios@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.35"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
